Still bug squashin.

--- a/css/base.css
+++ b/css/base.css
@@ -159,6 +159,7 @@ a.captionOrange:hover {
 
 #left-bar {
 	float:left;
+	display: block;
 }
 
 .slide_outer {
